fixed centering issues on mobile

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -244,7 +244,7 @@ ul#nav li a:hover {
     position: absolute;
     width: 27.25px;
     height: 0px;
-    left: 49px;
+    left: 88px;
     top: 13px;
     border: 1px solid #000000;
 }
@@ -274,7 +274,7 @@ ul#nav li a:hover {
     width: 26.98px;
     height: 0px;
     left: 314.95px;
-    top: 90px;
+    top: 82.499999px;
 
     
     border: 1px solid #000000;
@@ -287,7 +287,7 @@ ul#nav li a:hover {
     width: 27.25px;
     height: 0px;
     left: 299.75px;
-    top: 102px;
+    top: 95px;
 
     
     border: 1px solid #000000;
@@ -297,8 +297,8 @@ ul#nav li a:hover {
     position: absolute;
     width: 27.25px;
     height: 0px;
-    left: 47px;
-    top: 102px;
+    left: 88px;
+    top: 95px;
     
     border: 1px solid #000000;
 }
@@ -307,8 +307,8 @@ ul#nav li a:hover {
     position: absolute;
     width: 27px;
     height: 0px;
-    left: 34px;
-    top: 89.45px;
+    left: 74px;
+    top: 82.4px;
     
     border: 1px solid #000000;
     transform: rotate(90deg);
@@ -318,7 +318,7 @@ ul#nav li a:hover {
     position: absolute;
     width: 27px;
     height: 0px;
-    left: 34.5px;
+    left: 74.5px;
     top: 25.5px;
     
     border: 1px solid #000000;
